# test-multiple-o-files

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
