[package]
name = "test-multiple-o-files"
version = "0.1.0"
authors = ["Frederick Vollbrecht <frederick@vollbrecht.cc>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "test-multiple-o-files"
harness = false

[lib]
name = "hal"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-sys/native"]

#pio = ["esp-idf-svc/pio"]
std = ["esp-idf-sys/binstart", "esp-idf-sys/std"]
#alloc = ["esp-idf-sys/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#experimental = ["esp-idf-svc/experimental"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
#log = { version = "0.4", default-features = false }
# TODO: esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-sys = { version = "0.34.1", default-features = true }

[build-dependencies]
# TODO: embuild = "0.32.0"
embuild = "0.31.4"


# TODO: Remove before MERGE
# Used for testing CI prerelease
[patch.crates-io]
embuild = { git = "https://github.com/esp-rs/embuild" }
#esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
#esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
#embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
